# util_tools

./: .env.sample  .gitignore  README.md  pyproject.toml
100_knock/: numpy_100.py
audio/: pydub_scripts.py
audio/gcp/: speech_2_text.py  text_2_speech.py
audio/openai/: whisper.py
llms/: chains.py
open_ai/: fine_script.py  fine_turn.py
text/: levenstion.py  qa_generator.py
utils/: data_loader.py  logger.py
