[project]
name = "util-tools"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "click>=8.1.7",
    "openai>=1.52.2",
    "pandas>=2.2.3",
    "python-dotenv>=1.0.1",
    "langchain-openai>=0.2.3",
]


[tool.black]
target-version = ['py310'] # Pythonのバージョン
include = '\.py$'          # 対象ファイル

# フォーマットしないファイル
exclude = '''
(
    \.eggs
    | \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | venv
    | \.idea
    | _build
    | buck-out
    | build
    | dist
    | migrations
)
'''

[tool.pyright]
include = ["container"] # 対象ファイル
exclude = []               # フォーマットしないファイル

[tool.ruff]
target-version = "py310" # Pythonのバージョン
src = ["container"]   # 対象ファイル
exclude = []             # フォーマットしないファイル

[tool.ruff.lint]
ignore = ["E501"] # 指定したルールをチェックの対象から外す
select = ["E", "F", "I"]

